--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,33 +7,78 @@
     android:padding="16dp"
     android:gravity="center">
 
-    <GridLayout
-        android:id="@+id/boardGrid"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:columnCount="8"
-        android:rowCount="8"
-        android:layout_gravity="center"
-        android:layout_weight="1">
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center">
 
-        <!-- Example of a single square (Button) -->
-        <Button
-            android:id="@+id/square_0_0"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_rowWeight="1"
-            android:layout_columnWeight="1"
-            android:background="@drawable/light_square"/>
+    <!-- Example of a single square (Button) -->
+        <!--
+            <Button
+                android:id="@+id/square_0_0"
+                android:layout_width="0dp"
+                android:layout_height="1197dp"
+                android:layout_row="0"
+                android:layout_rowWeight="1"
+                android:layout_column="0"
+                android:layout_columnWeight="1"
+                android:background="@drawable/light_square"
+                android:visibility="invisible"/>
 
-        <Button
-            android:id="@+id/square_0_1"
-            android:layout_width="0dp"
-            android:layout_height="374dp"
-            android:layout_rowWeight="1"
-            android:layout_columnWeight="1"
-            android:background="@drawable/dark_square" />
+                    <Button
+                        android:id="@+id/square_0_1"
+                        android:layout_width="0dp"
+                        android:layout_height="452dp"
+                        android:layout_row="0"
+                        android:layout_rowWeight="1"
+                        android:layout_column="1"
+                        android:layout_columnWeight="1"
+                        android:background="@drawable/dark_square"
+                        android:visibility="invisible"/>
+        -->
+        <RadioGroup
+            android:id="@+id/colorOptions"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:gravity="center">
+
+        <RadioButton
+            android:id="@+id/blackoption"
+            android:layout_width="140dp"
+            android:layout_height="60dp"
+            android:text="Black"
+            android:textSize="18sp"
+            android:textColor="@android:color/white"
+            android:background="@color/black"
+            android:buttonTint="@android:color/white"
+            android:gravity="center"/>
+
+        <RadioButton
+            android:id="@+id/whiteoption"
+            android:layout_width="140dp"
+            android:layout_height="60dp"
+            android:text="White"
+            android:textSize="18sp"
+            android:textColor="@android:color/black"
+            android:background="@android:color/white"
+            android:buttonTint="@android:color/black"
+            android:gravity="center"/>
 
         <!-- Repeat the above Buttons for all 64 squares -->
-    </GridLayout>
 
-</LinearLayout>
+    </LinearLayout>
+
+    <RadioButton
+        android:id="@+id/randomoption"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:background="@android:color/darker_gray"
+        android:buttonTint="@android:color/black"
+        android:gravity="center"
+        android:text="Random"
+        android:textColor="@android:color/black"
+        android:textSize="18sp" />
+</RadioGroup>
+    </LinearLayout>
